Direct links to the edge function source code

--- a/src/appearance.liquid
+++ b/src/appearance.liquid
@@ -28,9 +28,9 @@ js:
 
 <hr>
 
-<h3>Source Code</h3>
-
 <p><a href="https://www.11ty.dev/docs/plugins/edge/">Learn more on 11ty.dev: Eleventy Edge Plugin documentation</a></p>
+
+<h3>Source Code</h3>
 
 <h4>Edge rendered Class in Layout file layout.liquid</h4>
 
@@ -61,6 +61,4 @@ js:
 
 <h4>Edge Function</h4>
 
-{% highlight js %}
-// ./netlify/edge-functions/dark-mode.js
-{% endhighlight %}
+* [./netlify/edge-functions/dark-mode.js](https://github.com/11ty/demo-eleventy-edge/blob/main/netlify/edge-functions/dark-mode.js)
