--- a/src/forms.liquid
+++ b/src/forms.liquid
@@ -15,9 +15,9 @@ subtitle: Forms
 
 <hr>
 
-<h3>Source Code</h3>
-
 <p><a href="https://www.11ty.dev/docs/plugins/edge/">Learn more on 11ty.dev: Eleventy Edge Plugin documentation</a></p>
+
+<h3>Source Code</h3>
 
 <h4>Username Display</h4>
 
@@ -36,6 +36,4 @@ subtitle: Forms
 
 <h4>Edge Function</h4>
 
-{% highlight js %}
-// ./netlify/edge-functions/forms.js
-{% endhighlight %}
+* [./netlify/edge-functions/forms.js](https://github.com/11ty/demo-eleventy-edge/blob/main/netlify/edge-functions/forms.js)
