--- a/src/appearance.liquid
+++ b/src/appearance.liquid
@@ -61,4 +61,4 @@ js:
 
 <h4>Edge Function</h4>
 
-* [./netlify/edge-functions/dark-mode.js](https://github.com/11ty/demo-eleventy-edge/blob/main/netlify/edge-functions/dark-mode.js)
+<a href="https://github.com/11ty/demo-eleventy-edge/blob/main/netlify/edge-functions/dark-mode.js"><code>./netlify/edge-functions/dark-mode.js</code></a>
