--- a/src/forms.liquid
+++ b/src/forms.liquid
@@ -36,4 +36,4 @@ subtitle: Forms
 
 <h4>Edge Function</h4>
 
-* [./netlify/edge-functions/forms.js](https://github.com/11ty/demo-eleventy-edge/blob/main/netlify/edge-functions/forms.js)
+<a href="https://github.com/11ty/demo-eleventy-edge/blob/main/netlify/edge-functions/forms.js"><code>./netlify/edge-functions/forms.js</code></a>
