--- a/src/_includes/layout.liquid
+++ b/src/_includes/layout.liquid
@@ -62,7 +62,7 @@ title: Eleventy Edge
 		</main>
 
 		<footer>
-			<h2>Edge-compatible Template Languages</h2>
+			<h2 id="tests">Edge-compatible Template Languages</h2>
 			<ul>
 				<li><a href="/tests/liquid/">Liquid</a></li>
 				<li><a href="/tests/liquid-md/">Liquid, Markdown</a></li>
